[gd_scene load_steps=9 format=3 uid="uid://b68245yenpuv4"]

[ext_resource type="Script" path="res://src/Dividing/Dividing.gd" id="1_pjbom"]
[ext_resource type="Theme" uid="uid://c5yuw7ps208b" path="res://assets/theme/main_theme.tres" id="2_ar1ay"]
[ext_resource type="Texture2D" uid="uid://g3ah7qq8kq6" path="res://assets/icons/colon.png" id="3_dr7ny"]
[ext_resource type="Texture2D" uid="uid://bwvr0mnnix15t" path="res://assets/icons/equal.png" id="4_7coqk"]
[ext_resource type="Script" path="res://src/Dividing/DivQuestionGenerator.gd" id="5_3lyty"]
[ext_resource type="PackedScene" uid="uid://ktq7dk11v77m" path="res://src/BackBtn/BackBtn.tscn" id="5_agt1j"]
[ext_resource type="PackedScene" uid="uid://cgqw7cyrqtiiy" path="res://src/AnswerPopups/CorrectAnswerPopup/CorrectAnswerPopup.tscn" id="6_2c3b5"]
[ext_resource type="PackedScene" uid="uid://diw4mtbdis572" path="res://src/AnswerPopups/WrongAnswerPopup/WrongAnswerPopup.tscn" id="7_2psbe"]

[node name="Dividing" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pjbom")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ar1ay")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Oblicz:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="A_Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "-1"

[node name="MultSign" type="TextureRect" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 24)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_dr7ny")
expand_mode = 1
stretch_mode = 6

[node name="B_Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "-1"

[node name="EqSign" type="TextureRect" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2
texture = ExtResource("4_7coqk")
expand_mode = 1
stretch_mode = 5

[node name="AnswerLineEdit" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CheckBtn" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
text = "SPRAWDÅ¹!"

[node name="BackBtn" parent="Panel" instance=ExtResource("5_agt1j")]
layout_mode = 0
offset_right = 119.0
offset_bottom = 68.0

[node name="CorrectAnswerPopup" parent="." instance=ExtResource("6_2c3b5")]
layout_mode = 1

[node name="WrongAnswerPopup" parent="." instance=ExtResource("7_2psbe")]
layout_mode = 1

[node name="DivQuestionGenerator" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_3lyty")
